# exercise_money

./: .gitignore  CMakeLists.txt  README.md  bench.sh
results/: log_openmp.txt
src/: CMakeLists.txt
src/money/: main.cpp  money.cpp  money.h
test/: CMakeLists.txt
test/money/: CMakeLists.txt  test_div.cpp  test_sum.cpp
